force-app/main/default/objects/Lead/fields/Nurture_Reason__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Reason__c</fullName>
    <label>Nurture Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Credit Limitation</fullName>
            </value>
            <value>
                <fullName>Downpayment Limitation</fullName>
            </value>
            <value>
                <fullName>Income/Employment Limitation</fullName>
            </value>
            <value>
                <fullName>Asset Limitation</fullName>
            </value>
            <value>
                <fullName>Property Limitation</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>Waiting for Rates</fullName>
            </value>
            <value>
                <fullName>Closed Elsewhere</fullName>
            </value>
            <value>
                <fullName>Proximity</fullName>
            </value>
            <value>
                <fullName>None Specified / General</fullName>
            </value>
            <value>
                <fullName>Never Connected</fullName>
            </value>
            <value>
                <fullName>Lost Contact</fullName>
            </value>
            <value>
                <fullName>Spanish LO</fullName>
            </value>
            <value>
                <fullName>Referred Out</fullName>
            </value>
            <value>
                <fullName>Opted to Sell</fullName>
            </value>
            <value>
                <fullName>Unlicensed State</fullName>
            </value>
            <value>
                <fullName>SMS Opt Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>