force-app/main/default/objects/Lead/fields/Omit__c.field-meta.xml
<CustomField>
    <fullName>Omit__c</fullName>
    <label>Omit from View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>