force-app/main/default/objects/Lead/fields/On_Pace_Savings_Scenario_3__c.field-meta.xml
<CustomField>
    <fullName>On_Pace_Savings_Scenario_3__c</fullName>
    <formula>Current_Payment__c - On_Pace_Payment_Scenario_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Pace Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>