force-app/main/default/objects/Lead/fields/Other_Financials__c.field-meta.xml
<CustomField>
    <fullName>Other_Financials__c</fullName>
    <label>Other Financials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>