force-app/main/default/objects/Lead/fields/Other_Monthly_Payments__c.field-meta.xml
<CustomField>
    <fullName>Other_Monthly_Payments__c</fullName>
    <inlineHelpText>All non-mortgage payments from credit report</inlineHelpText>
    <label>Other Monthly Pmts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>