force-app/main/default/objects/Lead/fields/OtherTotal__c.field-meta.xml
<CustomField>
    <fullName>OtherTotal__c</fullName>
    <formula>BorrowerOtherIncome__c + CoBorrowerOtherIncome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>