force-app/main/default/objects/Lead/fields/OvertimeTotal__c.field-meta.xml
<CustomField>
    <fullName>OvertimeTotal__c</fullName>
    <formula>BorrowerOvertime__c +  CoBorrowerOvertime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overtime Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>