force-app/main/default/objects/Lead/fields/PartnerLeadId__c.field-meta.xml
<CustomField>
    <fullName>PartnerLeadId__c</fullName>
    <externalId>true</externalId>
    <label>Partner Lead Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>