force-app/main/default/objects/Lead/fields/Payments_Remaining_Scenario_1__c.field-meta.xml
<CustomField>
    <fullName>Payments_Remaining_Scenario_1__c</fullName>
    <formula>ROUND((LOG((-Current_Payment__c)/((First_Loan_Amount_Scenario_1__c*(Rate_Scenario_1__c/12)- Current_Payment__c ))))/(LOG(1+(Rate_Scenario_1__c/12))), 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payments Remaining Scenario 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>