force-app/main/default/objects/Lead/fields/Payments_Remaining_Scenario_2__c.field-meta.xml
<CustomField>
    <fullName>Payments_Remaining_Scenario_2__c</fullName>
    <formula>CEILING((LOG((-Current_Payment__c)/((First_Loan_Amount_Scenario_2__c*(Rate_Scenario_2__c/12)- Current_Payment__c ))))/(LOG(1+(Rate_Scenario_2__c/12))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payments Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>