force-app/main/default/objects/Lead/fields/Price_Est_Value__c.field-meta.xml
<CustomField>
    <fullName>Price_Est_Value__c</fullName>
    <label>Estimated Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>