force-app/main/default/objects/Lead/fields/Price_Value_Range__c.field-meta.xml
<CustomField>
    <fullName>Price_Value_Range__c</fullName>
    <label>Price / Value Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$250,000 or less</fullName>
            </value>
            <value>
                <fullName>$250,000 - $500,000</fullName>
            </value>
            <value>
                <fullName>$500,000 - $750,000</fullName>
            </value>
            <value>
                <fullName>$750,000 - $1,000,000</fullName>
            </value>
            <value>
                <fullName>$1,000,000 or more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>