force-app/main/default/objects/Lead/fields/PrimaryGoal__c.field-meta.xml
<CustomField>
    <fullName>PrimaryGoal__c</fullName>
    <label>Primary Goal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Reduce Rate</fullName>
            </value>
            <value>
                <fullName>Reduce Payment</fullName>
            </value>
            <value>
                <fullName>Eliminate MI</fullName>
            </value>
            <value>
                <fullName>Pay Off Loan Faster</fullName>
            </value>
            <value>
                <fullName>Debt Consolidation</fullName>
            </value>
            <value>
                <fullName>Home Improvement</fullName>
            </value>
            <value>
                <fullName>Future Investments</fullName>
            </value>
            <value>
                <fullName>Convert ARM to Fixed</fullName>
            </value>
            <value>
                <fullName>Buy Out Partner</fullName>
            </value>
            <value>
                <fullName>Other - See Notes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>