force-app/main/default/objects/Lead/fields/PrimaryHousingExpense__c.field-meta.xml
<CustomField>
    <fullName>PrimaryHousingExpense__c</fullName>
    <formula>First_Mortgage__c +  Other_Financials__c +  Hazard_Insurance__c + Taxes__c +  Mortgage_Insurance__c + HOA__c + Other_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject Property Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>