force-app/main/default/objects/Lead/fields/Priority_Sort__c.field-meta.xml
<CustomField>
    <fullName>Priority_Sort__c</fullName>
    <description>Rating and Grade for Priority Sorting</description>
    <formula>CASE (Rating, &apos;Hot&apos;, &apos;1&apos;, &apos;Warm&apos;, &apos;2&apos;, &apos;Cold&apos;, &apos;3&apos;, &apos;9&apos;) + &apos; &apos; +   

CASE (Grade__c, &apos;Highly Qualified&apos;, &apos;A&apos;, &apos;Qualified&apos;, &apos;B&apos;, &apos;Needs Work&apos;, &apos;C&apos;, &apos;F&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Sort</label>
    <type>Text</type>
</CustomField>