force-app/main/default/objects/Lead/fields/ProposedFirstLoanRate__c.field-meta.xml
<CustomField>
    <fullName>ProposedFirstLoanRate__c</fullName>
    <label>Proposed First Loan Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>