force-app/main/default/objects/Lead/fields/PurchasedYear__c.field-meta.xml
<CustomField>
    <fullName>PurchasedYear__c</fullName>
    <label>Purchased Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>