force-app/main/default/objects/Lead/fields/PurchasedYearText__c.field-meta.xml
<CustomField>
    <fullName>PurchasedYearText__c</fullName>
    <formula>TEXT(PurchasedYear__c)</formula>
    <label>Purchased Year Text</label>
    <type>Text</type>
</CustomField>