force-app/main/default/objects/Lead/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
            <value>
                <fullName>Refi_No_Cashout</fullName>
                <label>Refinance - No Cash Out</label>
            </value>
            <value>
                <fullName>Refi_Cashout</fullName>
                <label>Refinance - Cash Out</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>