force-app/main/default/objects/Lead/fields/Qualifying_Fico__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Fico__c</fullName>
    <description>Lowest Middle Fico Score of All Borrowers</description>
    <label>Qualifying Fico</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>