force-app/main/default/objects/Lead/fields/QualitfyingLTV__c.field-meta.xml
<CustomField>
    <fullName>QualitfyingLTV__c</fullName>
    <formula>Loan_Amount__c/ Estimated_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qualitfying LTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>