force-app/main/default/objects/Lead/fields/RCA_Request_JSON__c.field-meta.xml
<CustomField>
    <fullName>RCA_Request_JSON__c</fullName>
    <label>RCA Request JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>