force-app/main/default/objects/Lead/fields/RCA_Response_JSON__c.field-meta.xml
<CustomField>
    <fullName>RCA_Response_JSON__c</fullName>
    <label>RCA Response JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>