force-app/main/default/objects/Lead/fields/RCDisposition__c.field-meta.xml
<CustomField>
    <fullName>RCDisposition__c</fullName>
    <label>RC Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>