force-app/main/default/objects/Lead/fields/Recent_Task_Count__c.field-meta.xml
<CustomField>
    <fullName>Recent_Task_Count__c</fullName>
    <description>Currently set to last 5 days - populated with Rollup Helper</description>
    <label>Recent Task Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>