force-app/main/default/objects/Lead/fields/RecordingFeeS2__c.field-meta.xml
<CustomField>
    <fullName>RecordingFeeS2__c</fullName>
    <label>Recording Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>