force-app/main/default/objects/Lead/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>