force-app/main/default/objects/Lead/fields/Referred_By_Account__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Account__c</fullName>
    <formula>Referred_By__r.AccountName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referred By Account</label>
    <type>Text</type>
</CustomField>