force-app/main/default/objects/Lead/fields/Retirement_Assets__c.field-meta.xml
<CustomField>
    <fullName>Retirement_Assets__c</fullName>
    <label>Retirement Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>