force-app/main/default/objects/Lead/fields/Running_User__c.field-meta.xml
<CustomField>
    <fullName>Running_User__c</fullName>
    <formula>IF(    
or(
text(Loan_Originator__c) =  $User.FirstName &amp;&quot; &quot;&amp; $User.LastName ,text(Loan_Originator__c) =  Owner:User.FirstName &amp;&quot; &quot;&amp; Owner:User.LastName),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Running User</label>
    <type>Checkbox</type>
</CustomField>