force-app/main/default/objects/Lead/fields/Savings_Assets__c.field-meta.xml
<CustomField>
    <fullName>Savings_Assets__c</fullName>
    <label>Savings Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>