force-app/main/default/objects/Lead/fields/Scenarios_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Scenarios_Insurance__c</fullName>
    <label>Scenarios Insurance %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>