force-app/main/default/objects/Lead/fields/Scenarios_MI_Percent__c.field-meta.xml
<CustomField>
    <fullName>Scenarios_MI_Percent__c</fullName>
    <label>Scenarios MI Percent</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>