force-app/main/default/objects/Lead/fields/SecondLoanAmount__c.field-meta.xml
<CustomField>
    <fullName>SecondLoanAmount__c</fullName>
    <label>Second Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>