force-app/main/default/objects/Lead/fields/SecondLoanRate__c.field-meta.xml
<CustomField>
    <fullName>SecondLoanRate__c</fullName>
    <label>Second Loan Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>