force-app/main/default/objects/Lead/fields/Select_Scenario1__c.field-meta.xml
<CustomField>
    <fullName>Select_Scenario1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Select Scenario1</label>
    <type>Checkbox</type>
</CustomField>