force-app/main/default/objects/Lead/fields/Select_Scenario3__c.field-meta.xml
<CustomField>
    <fullName>Select_Scenario3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Select Scenario3</label>
    <type>Checkbox</type>
</CustomField>