force-app/main/default/objects/Lead/fields/Self_Reported_Credit__c.field-meta.xml
<CustomField>
    <fullName>Self_Reported_Credit__c</fullName>
    <label>Credit Self Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Excellent  (720+)</fullName>
            </value>
            <value>
                <fullName>Good  (680-719)</fullName>
            </value>
            <value>
                <fullName>Average (640-679)</fullName>
            </value>
            <value>
                <fullName>Fair (580-639)</fullName>
            </value>
            <value>
                <fullName>Poor (579 and below)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>