force-app/main/default/objects/Lead/fields/Silence_Until__c.field-meta.xml
<CustomField>
    <fullName>Silence_Until__c</fullName>
    <description>For pipeline view purposes so the Lead shows only when Active.</description>
    <inlineHelpText>For pipeline view purposes so the Lead shows only when Active.</inlineHelpText>
    <label>Silence Until</label>
    <type>Date</type>
</CustomField>