force-app/main/default/objects/Lead/fields/Sort_Date__c.field-meta.xml
<CustomField>
    <fullName>Sort_Date__c</fullName>
    <formula>IF(
AND(
ISBLANK( Convert_By__c )
),
DATEVALUE(CreatedDate),
DATEVALUE(CreatedDate) +
MIN(
IF(
ISBLANK( Convert_By__c ) || Convert_By__c &lt; TODAY(),
DATEVALUE(CreatedDate),
Convert_By__c
) - DATEVALUE(CreatedDate)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sort Date</label>
    <type>Date</type>
</CustomField>