force-app/main/default/objects/Lead/fields/Source_URL__c.field-meta.xml
<CustomField>
    <fullName>Source_URL__c</fullName>
    <description>The Source URL of the Lead</description>
    <label>Source URL</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>