force-app/main/default/objects/Lead/fields/Source_Website__c.field-meta.xml
<CustomField>
    <fullName>Source_Website__c</fullName>
    <label>Source Website</label>
    <length>30</length>
    <type>Text</type>
</CustomField>