force-app/main/default/objects/Lead/fields/Sub_Financing__c.field-meta.xml
<CustomField>
    <fullName>Sub_Financing__c</fullName>
    <label>Sub Financing</label>
    <length>50</length>
    <type>Text</type>
</CustomField>