force-app/main/default/objects/Lead/fields/Subject_Property_City__c.field-meta.xml
<CustomField>
    <fullName>Subject_Property_City__c</fullName>
    <label>Subject Property City</label>
    <length>250</length>
    <type>Text</type>
</CustomField>