force-app/main/default/objects/Lead/fields/Subject_Property_County__c.field-meta.xml
<CustomField>
    <fullName>Subject_Property_County__c</fullName>
    <label>Subject Property County</label>
    <length>75</length>
    <type>Text</type>
</CustomField>