force-app/main/default/objects/Lead/fields/Subject_Property_State__c.field-meta.xml
<CustomField>
    <fullName>Subject_Property_State__c</fullName>
    <label>Subject Property State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>