force-app/main/default/objects/Lead/fields/Subject_Property_Street__c.field-meta.xml
<CustomField>
    <fullName>Subject_Property_Street__c</fullName>
    <label>Subject Property Street</label>
    <length>250</length>
    <type>Text</type>
</CustomField>