force-app/main/default/objects/Lead/fields/Subject_Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Subject_Property_Type__c</fullName>
    <label>Prop Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Property_Types_Lead</valueSetName>
    </valueSet>
</CustomField>