force-app/main/default/objects/Lead/fields/Subject_Property_Zip__c.field-meta.xml
<CustomField>
    <fullName>Subject_Property_Zip__c</fullName>
    <label>Subject Property Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>